# football_predictor

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  backfill.py  predict_advanced.py  predict_custom.py  predict_real.py  predict_user_list.py  pyproject.toml  requirements.txt  scheduler.py  seed_accuracy.py  suggest_bets.py
.github/workflows/: ci.yml
api/: main.py
config/: settings.py
dashboard/: app.py
db/: database.py
features/: pipeline.py
models/: predict.py  train.py
scrapers/: base.py  fbref.py  football_data.py  injuries.py  odds.py
scratch/: check_teams.py
tests/: test_scrapers.py
