[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "football-predictor"
version = "2.0.0"
description = "AI-powered football match prediction"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["db*", "api*", "config*", "models*", "features*", "scrapers*", "dashboard*"]
exclude = ["tests*", "*.tests"]

[tool.mypy]
ignore_missing_imports = true
no_implicit_optional = false
check_untyped_defs = false