[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "football-predictor"
version = "2.0.0"
description = "AI-powered football match prediction"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
    "urllib3>=1.26.0",
    "pandas>=2.0.0",
    "sqlalchemy>=2.0.0",
    "xgboost>=2.0.0",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "apscheduler>=3.10.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "streamlit>=1.28.0",
]

[tool.setuptools.packages.find]
include = ["db*", "api*", "config*", "models*", "features*", "scrapers*", "dashboard*"]
exclude = ["tests*", "*.tests"]

[tool.mypy]
ignore_missing_imports = true
no_implicit_optional = false
check_untyped_defs = false